Sprint 11: BI/Commercial module + exports (CSV/XLSX/JSON) + Docker + QA

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,64 @@ services:
       retries: 5
       start_period: 5s
 
+  housekeeping:
+    build:
+      context: .
+      dockerfile: Dockerfile.housekeeping
+    ports:
+      - "8083:8083"
+    networks:
+      - nexefii_net
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request,sys; sys.exit(0) if urllib.request.urlopen('http://localhost:8083/health').getcode()==200 else sys.exit(1)"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
+  alerts:
+    build:
+      context: .
+      dockerfile: Dockerfile.alerts
+    ports:
+      - "8084:8084"
+    networks:
+      - nexefii_net
+    volumes:
+      - alert_data:/data
+    environment:
+      - ALERT_LOG_PATH=/data/alert_log.json
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request,sys; sys.exit(0) if urllib.request.urlopen('http://localhost:8084/health').getcode()==200 else sys.exit(1)"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
+  dnd-adapter:
+    build:
+      context: .
+      dockerfile: Dockerfile.dnd-adapter
+    ports:
+      - "8085:8085"
+    networks:
+      - nexefii_net
+    environment:
+      - HOUSEKEEPING_URL=http://housekeeping:8083/hk/ingest/dnd
+      - ALERTS_URL=http://alerts:8084/alerts/evaluate
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request,sys; sys.exit(0) if urllib.request.urlopen('http://localhost:8085/health').getcode()==200 else sys.exit(1)"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
   web:
     build:
       context: .
@@ -67,6 +125,7 @@ services:
 
 volumes:
   postgres_data:
+  alert_data:
 
 networks:
   nexefii_net:
